config-map/k8s/mongodb.yml
#Create a deployment by using the mongo:3.6.6 image from Docker Hub
#Use mongodb as the deployment name
#While creating the mongodb deployment, apply the username and password defined in secret
#Use the names as follows `MONGO_INITDB_ROOT_USERNAME` - username, `MONGO_INITDB_ROOT_PASSWORD` - password
#Use containerPort 27017
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
    version: v1
  name: mongodb
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mongodb
      version: v1
  template:
    metadata:
      labels:
        app: mongodb
        version: v1
    spec:
      containers:
        - image: mongo:3.6.6
          name: mongodb
          ports:
          - containerPort: 27017
---
#Create the service of type ClusterIP and use the above created deployment as selector
#Use port 27017
#Use mongodb as the service name
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb
    version: v1
  type: ClusterIP
